--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/swiper.css">
 </head>
 <body>
-<div class="container-fluid main">
+<div class="container-fluid main" id="home">
 <!--Nav Start-->
     <div class="container">
         <nav class="navbar navbar-expand-lg">
@@ -25,22 +25,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">What We Offer</a>
+                        <a class="nav-link" href="#offer">What We Offer</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Gallery</a>
+                        <a class="nav-link" href="#gallery">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
+                        <a class="nav-link" href="#about">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"> Testimonials</a>
+                        <a class="nav-link" href="#testimonials"> Testimonials</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link" href="#contact">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -59,7 +59,7 @@
     <a href="#" class="btn-primary">online booking</a>
 </div>
 </div>
-<section class="container offer">
+<section class="container offer" id="offer">
     <div class="row flex-center">
         <div class="col-md-10">
             <h1>WHAT WE OFFER</h1>
@@ -95,7 +95,7 @@
 </section>
 <!--Offer End-->
 <!--Photo Gallery-->
-<div class="container-fluid photo-gallery">
+<div class="container-fluid photo-gallery" id="gallery">
     <div class="row">
         <div class="column">
             <img src="assets/foto1.jpg" alt="">
@@ -113,7 +113,7 @@
     </div>
 </div><!--Galerry End-->
 <!--our team Start-->
-<section class="team">
+<section class="team" id="team">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -151,7 +151,7 @@
     </div>
 </section>
 <!--About-->
-<section class="about">
+<section class="about" id="about">
     <div class="container">
         <div class="row">
             <div class="col-md-6 text">
@@ -177,8 +177,13 @@
     </div>
 </section>
 <!--TESTIMONIALS-->
-<section class="testimonials">
+<section class="testimonials" id="testimonials">
     <div class="container">
+        <div class="row justify-content-center text-center">
+            <div class="col-md-8">
+                <h1>TESTIMONIALS</h1>
+            </div>
+        </div>
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="swiper-container">
@@ -229,14 +234,13 @@
                         </div>
                     </div>
                 </div>
-                <!-- Add Pagination -->
                 <div class="swiper-pagination"></div>
             </div>
         </div>
     </div>
 </section>
 <!--Contact-->
-<section class="contact">
+<section class="contact" id="contact">
     <div class="container">
         <div class="row">
             <div class="col-md-4 mb-5">
@@ -271,10 +275,10 @@
     </div>
 </footer>
 <script src="js/swiper.js"></script>
-<script src="/js/jquery.min.js"></script>
-<script src="/js/popper.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/main.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/main.js"></script>
 <script type="text/javascript">
 
 </body>
